feat(phase-9): implement advanced autonomous development system